--- a/src/core/vars-theme-dark.css
+++ b/src/core/vars-theme-dark.css
@@ -22,6 +22,7 @@
     --input-background : var(--mono-50);
     --menu-background  : var(--mono-100);
     --menu-border-width: 1px;
+    --scrollbar-thumb-color: var(--mono-200);
 
     /* Elements */
     --kbd-background  : var(--mono-100);
